--- a/style.css
+++ b/style.css
@@ -66,11 +66,11 @@ nav a{
 }
 
 .content {
-    background-color: blue;
+    background-color: darkgrey;
 }
 
 .content > .container {
-    background-color: blue;
+    background-color: darkgrey;
 }
 
 .articles {
@@ -118,12 +118,12 @@ nav a{
 }
 
 nav ul li:last-child {
-    background-color: blue;
+    background-color: grey;
     border-radius: 10px; 
 }
 
 .btn {
-    background: blue;
+    background: grey;
     font-size: 20px;
     width: 250px;
     text-align: center;
@@ -154,4 +154,5 @@ label, input, textarea {
 
 body {
     background-color: bisque;
+
 }
